# felucca-package-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/tests/: test_contract.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/: c3_tensor_loader.cairo  c4_tensor_loader.cairo  contract.cairo
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/onnx_cairo/: tensor_console_utils.cairo  tensor_data_types.cairo  tensor_error_handler.cairo  tensor_loader.cairo  tensor_operations.cairo  tensor_utils.cairo
