[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["John Doe <john.doe@email.com>"]
keywords = ["felucca"]
include = ["{{ cookiecutter.project_slug }}/*.cairo", "{{ cookiecutter.project_slug }}/*/*.cairo"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
sympy = "^1.11.1"
cairo-nile = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.20.3"
black = {version = "^22.1.0", allow-prereleases = true}
felucca = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"